obsplus master:
  - obsplus.bank
    * Speed up wavebank.get_waveforms_bulk by time-filtering index before
      determining which files to read (see #93).
    * Update time is now set before reading files to update index (#95).
  - obsplus.conversions
    * Added a preserve_units flag to project and ensured forward compatibility
      with pyproj 2.x.x.


obsplus 0.0.1:
  - obsplus.bank
    * Speed up wavebank reads of file segments by passing start/end times
      to underlying obspy functions (see #34).
    * Speed up wavebank's get_waveforms and related methods by replacing
      obspy's merge/split with a pandas merge function (see #50).
    * Fixed issue #49 where traces with masked arrays could be returned from
      WaveBank's get_waveforms methods (see #50).
    * Added better error messages for trying to pull data from banks that do
      not exist (see #36)
    * Event bank eventid param can now accept numpy arrays (see 30).
    * Added basic file-locking mechanism for wavebank and multiprocessing
      tests (see #70).
    * Update_index methods now return the bank instance which allows chaining
      the update call with the init (see #83).
  - obsplus.waveforms
    * Added stack_seed and unstack_seed methods to obsplus data array
      accessors (see #27).
    * Added function for creating SDS archives from existing archives
      (see #35).
    * Made `Stream.get_waveforms_bulk` more efficient (see #85).
    * Added `slice_stream_bulk` method for creating lists of sliced streams
      (see #85).
  - obsplus.events
    * Added utility function to create origins based on first hit station if
      an event has only picks (see #32).
    * Added utility function for removed rejected orphaned objects from
      catalog tree (see #63).
    * Added the init_empty parameter to get_preferred, fixed an issue where
      an IndexError could get raised (see #65), and moved get_preferred from
      obsplus.utils to obsplus.events.utils (see #66).