@@ -287,6 +287,16 @@ class TestArchiveToSDS:
 class TestStreamBulkSplit:
     """ Tests for converting a trace to a list of Streams. """
 
+    @pytest.fixture
+    def multi_stream(self):
+        """ Create two streams with different station names/channels """
+        st1 = obspy.read()
+        st2 = obspy.read()
+        for tr in st2:
+            tr.stats.station = "BOB"
+            tr.stats.channel = "HH" + tr.stats.channel[-1]
+        return st1 + st2
+
     def get_bulk_from_stream(self, st, tr_inds, times):
         """ Create a bulk argument from a stream for traces specified and
         relative times. """
